A lot more work
Real commit titles don't start until the rest of the core is done. For now, it's just bouncing around between everything getting stuff working.

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,3 +4,7 @@ mod_version=1.0.0
 mc_version=1.7.10
 forge_version=recommended
 curse_id=0
+
+waila_version=1.5.11-RC2-NONEI
+ccc_version=1.0.7.47
+nei_version=1.0.5.118
