--- a/build.gradle
+++ b/build.gradle
@@ -42,11 +42,15 @@ task tagRelease << {
 }
 
 repositories {
-
+    maven { url "http://mobiusstrip.eu/maven" }
+    maven { url "http://chickenbones.net/maven/" }
 }
 
 dependencies {
     compile "org.projectlombok:lombok:1.16.4"
+    compile "mcp.mobius.waila:Waila:${waila_version}_${mc_version}:dev"
+    compile "codechicken:CodeChickenCore:${mc_version}-${ccc_version}:dev"
+    compile "codechicken:NotEnoughItems:${mc_version}-${nei_version}:dev"
 }
 
 minecraft {
